--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             </div>
         </section>
 
+        <footer>Youssef R. 2021</footer>
         <link rel="stylesheet" href="style.css"> 
         <script src="json.js"></script>
         <script src="index.js"></script>
